tests/snapshots/integration__fail__invalid_syntax.rl.snap
---
source: tests/integration.rs
expression: output
---
error: unexpected token
  ┌─ /home/anurag/Projects/plrs/tests/files/fail/invalid_syntax.rl:1:1
  │
1 │ if
  │ ^ did not expect token of `EndOfFile` type
